--- a/config/config.yaml
+++ b/config/config.yaml
@@ -817,14 +817,14 @@ lights:
     platform_settings:
       polarity: True
 
-  l_tool2ready:
+  l_tool3ready:
     type: rgb
     tags: lfeature
     number: 5-42-43-44
     platform_settings:
       polarity: True
 
-  l_tool3ready:
+  l_tool2ready:
     type: rgb
     tags: lfeature
     number: 5-45-46-47
@@ -1474,7 +1474,23 @@ player_vars:
   sword:
     initial_value: 1
     value_type: int 
- 
+
+  #Tool Helpers
+  tools_ready:
+    initial_value: 0
+    value_type: int
+
+  tools_collected:
+    initial_value: 0
+    value_type: int
+
+  tools_available:
+    initial_value: 4
+    value_type: int
+
+  crafting_enabled:
+    initial_value: 0
+    value_type: int
 
 # SLIDES CONFIGURATION
 #--------------------------------------------
