--- a/modes/bonus/config/bonus.yaml
+++ b/modes/bonus/config/bonus.yaml
@@ -5,7 +5,7 @@ mode:
 mode_settings:
   display_delay_ms: 1500
   hurry_up_delay_ms: 0
-  keep_multiplier: false
+  keep_multiplier: true
   bonus_entries:
   - event: bonus_items
     score: 1000
