--- a/modes/world2/config/world2.yaml
+++ b/modes/world2/config/world2.yaml
@@ -25,7 +25,7 @@ sound_player:
   
 variable_player:
   #setup environment variables
-  mode_world2_started:  
+  mode_world2_started{current_player.world2_setup==0}:  
     #World Settings
     world_id:
       int: 2
@@ -44,8 +44,8 @@ variable_player:
     world_item1_color:
       string: "Yellow"
       action: set 
-    world_item1_needed:
-      int: 2
+    world_item1_remaining:
+      int: 4
       action: set
 
     #Item 2 Settings
@@ -55,8 +55,8 @@ variable_player:
     world_item2_color:
       string: "GRAY"
       action: set 
-    world_item2_needed:
-      int: 2
+    world_item2_remaining:
+      int: 4
       action: set
 
     #Item 3 Settings
@@ -66,8 +66,8 @@ variable_player:
     world_item3_color:
       string: "BROWN"
       action: set 
-    world_item3_needed:
-      int: 2
+    world_item3_remaining:
+      int: 4
       action: set
 
     #Item 4 Settings
@@ -77,93 +77,13 @@ variable_player:
     world_item4_color:
       string: "SLATEGRAY"
       action: set 
-    world_item4_needed:
-      int: 2
-      action: set
-
-  logicblock_wc2_item1_counter_updated:
-    world_item1_remaining:
-      int: value
-      action: set
-  logicblock_wc2_item2_counter_updated:
-    world_item2_remaining:
-      int: value
-      action: set
-  logicblock_wc2_item3_counter_updated:
-    world_item3_remaining:
-      int: value
-      action: set
-  logicblock_wc2_item4_counter_updated:
     world_item4_remaining:
-      int: value
+      int: 4
       action: set
 
-counters:
-  wc2_item1_counter:
-    count_events: collectitem1_hit
-    reset_on_complete: False
-    starting_count: 2
-    count_complete_value: 0
-    direction: down
-    persist_state: true
-    events_when_complete: w2_itemcheckcomplete
-    multiple_hit_window: 500ms
-    enable_events: mode_world2_started
-  wc2_item2_counter:
-    count_events: collectitem2_hit
-    reset_on_complete: False
-    starting_count: 2
-    count_complete_value: 0
-    direction: down
-    persist_state: true
-    events_when_complete: w2_itemcheckcomplete
-    multiple_hit_window: 500ms
-    enable_events: mode_world2_started
-  wc2_item3_counter:
-    count_events: collectitem3_hit
-    reset_on_complete: False
-    starting_count: 2
-    count_complete_value: 0
-    direction: down
-    persist_state: true
-    events_when_complete: w2_itemcheckcomplete
-    multiple_hit_window: 500ms
-    enable_events: mode_world2_started
-  wc2_item4_counter:
-    count_events: collectitem4_hit
-    reset_on_complete: False
-    starting_count: 2
-    count_complete_value: 0
-    direction: down
-    persist_state: true
-    events_when_complete: w2_itemcheckcomplete
-    multiple_hit_window: 500ms
-    enable_events: mode_world2_started
+    #Mark World as Setup
+    world2_setup: 1
 
 event_player:
-  mode_world2_started:
-    world2_started
-    w2_itemcheckcomplete
-
-  w2_itemcheckcomplete{current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
+  world_collected:
     world2_collected
-
-  w2_itemcheckcomplete{current_player.world_item1_remaining > 0}:
-    collectitem1_enabled
-  w2_itemcheckcomplete{current_player.world_item1_remaining == 0}:
-    collectitem1_disabled
-  
-  w2_itemcheckcomplete{current_player.world_item2_remaining > 0}:
-    collectitem2_enabled
-  w2_itemcheckcomplete{current_player.world_item2_remaining == 0}:
-    collectitem2_disabled
-
-  w2_itemcheckcomplete{current_player.world_item3_remaining > 0}:
-    collectitem3_enabled
-  w2_itemcheckcomplete{current_player.world_item3_remaining == 0}:
-    collectitem3_disabled
-
-  w2_itemcheckcomplete{current_player.world_item4_remaining > 0}:
-    collectitem4_enabled
-  w2_itemcheckcomplete{current_player.world_item4_remaining == 0}:
-    collectitem4_disabled
