--- a/modes/world6/config/world6.yaml
+++ b/modes/world6/config/world6.yaml
@@ -22,64 +22,9 @@ sound_player:
       loops: -1
       mode_end_action: stop
 
-variable_player:
+#variable_player:
  #setup environment variables
-  mode_world5_started:  
-    #World Settings
-    world_id:
-      int: 6
-      action: set
-    world_name: 
-      string: "World 6"
-      action: set
-    world_color: 
-      string: "RED"
-      action: set
-
-    #Item 1 Settings
-    world_item1_name:
-      string: "Dirt"
-      action: set 
-    world_item1_color:
-      string: "GREEN"
-      action: set 
-    world_item1_needed:
-      int: 5
-      action: set
-
-    #Item 2 Settings
-    world_item2_name:
-      string: "Stone"
-      action: set 
-    world_item2_color:
-      string: "GRAY"
-      action: set 
-    world_item2_needed:
-      int: 5
-      action: set
-
-    #Item 3 Settings
-    world_item3_name:
-      string: "Ore"
-      action: set 
-    world_item3_color:
-      string: "BROWN"
-      action: set 
-    world_item3_needed:
-      int: 5
-      action: set
-
-    #Item 4 Settings
-    world_item4_name:
-      string: "Wood"
-      action: set 
-    world_item4_color:
-      string: "SLATEGRAY"
-      action: set 
-    world_item4_needed:
-      int: 5
-      action: set
-
+ 
 
 
 
